LDEV-3021: Fix Gate activity pop up not showing in Sequence tab. Add "loading" animation when refreshing Monitor. Add double refresh prevention measure.

--- a/lams_monitoring/web/css/monitorLesson.css
+++ b/lams_monitoring/web/css/monitorLesson.css
@@ -164,6 +164,11 @@ div#sequenceCanvas svg {
 	overflow: hidden;
 }
 
+img#sequenceCanvasLoading {
+	padding: 5px 0 0 370px;
+	display: none;
+}
+
 div#completedLearnersContainer {
 	padding: 4px 0px 3px 5px;
 	border-top: thin dotted #2E6E9E;
